2003-06-20  Adam Fedor  <fedor@gnu.org>

	* Source/DocMakefile (after-all): Check if Gui exists before
	removing.

2003-06-20  Adam Fedor  <fedor@gnu.org>

	* Version 0.8.7

2003-06-21  David Ayers  <d.ayers@inode.at>

	* PrinterTypes/GNUmakefile.postamble: Add -f option to rm in
	uninstall of resource files.

2003-06-17  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile (SUBPROJECTS): Add Documentation

2003-06-17  Adam Fedor  <fedor@gnu.org>

	* Source/NSDocumentController.m: Add GSGuiPrivate header for
	localization.
	* Source/NSSavePanel.m: Idem.

2003-06-17  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/gui/GSDisplayServer.h
	Changes style parameter of [stylewindow:style:] and
	[styleoffsets:::::] to unsigned, to be consistent with the other
	style methods.
	* Source/GSDisplayServer.m
	Adopted to changes in header.

2003-06-15 16:26  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSHorizontalTypesetter.m: Use NSIsEmptyRect instead of
	comparing for equality with NSZeroRect.
	(-layoutLineNewParagraph:): Handle text containers with no area.

2003-06-15 14:57  Alexander Malmberg <alexander@malmberg.org>

	* configure.ac: Don't add GNUSTEP_HDIR/GNUSTEP_LDIR to
	ADDITIONAL_INCLUDE_DIRS/ADDITIONAL_LIB_DIRS.
	configure: Regenerate.

2003-06-15 02:35  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSNibTemplates.h, Source/NSBundleAdditions.m:
	Remove unused GSFontProxy class.

 2003-06-08  David Ayers  <d.ayers@inode.at>
 	
	* Headers/gnustep/gui/IMConnectors.h: Change syntax of include <>
 	to "" for local headers.  Change base/ to gnustep/base/ in
 	includes.  Change AppKit/GSFiles.h to gnustep
 	gnustep/gui/GSFiles.h includes.
 	* Source/Functions.m, Source/GSDisplayServer.m, Source/GSFontInfo.m,
 	Source/GSFusedSilica.m, Source/GSFusedSilicaContext.m,
 	Source/GSHbox.m, Source/GSHelpManagerPanel.m,
 	Source/GSInfoPanel.m, Source/GSKeyBindingAction.m,
 	Source/GSKeyBindingTable.m, Source/GSLayoutManager.m,